<resources>
    <string name="app_name">Grosir Mobil</string>
    <string name="base_tv_please_wait">Please Wait…</string>
    <string name="base_tv_permission_application">Please grant Camera, Memory, and Location Permissions for the App</string>
    <string name="base_tv_we_lost_connection">We Lost Connection</string>
    <string name="base_btn_check_connection_setting">Check Connection Setting</string>
    <string name="base_btn_enable_permission">Give Permission</string>
    <string name="base_null_error_title">Ops, Something Wrong!</string>
    <string name="base_null_page_not_found">Ops, Page Not Found!</string>
    <string name="base_null_server">No Internet Available !\n\nInternal Server Error.</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_retry">Retry</string>
    <string name="btn_done">Done</string>
    <string name="btn_next">Lanjutkan</string>
    <string name="btn_close">Tutup</string>
    <string name="btn_login">Masuk</string>
    <string name="tv_password">Password</string>
    <string name="tv_email">Email</string>
    <string name="toast_please_click_back_again_to_exit">Please click BACK again to exit</string>
    <string name="tv_empty_email_password">Email and Password Empty</string>
    <string name="tv_lewati"><![CDATA[Lewati>>]]></string>
    <string name="tv_selamat_datang_sobat_gmob">Selamat datang mitra GMob!</string>
    <string name="tv_dengan_grosirmobil_cari_dan_pilih_unit_yang_anda_butuhkan_kini_lebih_mudah">Dengan GrosirMobil, cari dan pilih unit\nyang anda butuhkan kini lebih mudah!</string>
    <string name="btn_selanjutnya">Selanjutnya</string>
    <string name="btn_selesai">Selesai</string>
    <string name="tv_bayar_dan_bawa_pulang">Bayar dan Bawa Pulang</string>
    <string name="tv_tawar_atau_buy_now">Tawar atau Buy Now</string>
    <string name="tv_belum_mempunyai_akun">Belum mempunyai akun?</string>
    <string name="tv_daftar">Daftar</string>
    <string name="tv_masuk">Masuk</string>
    <string name="tv_selamat_datang_silahkan_masukkan_akun_anda">Selamat datang, silahkan masukkan akun Anda</string>
    <string name="tv_lupa_password">Lupa Password</string>
    <string name="menu_home">Galeri</string>
    <string name="menu_menang">Menang</string>
    <string name="menu_pemberitahuan">Info</string>
    <string name="menu_keranjang">Keranjang</string>
    <string name="tv_home">Galeri</string>
    <string name="tv_menang">Menang</string>
    <string name="tv_garasi">Keranjang</string>
    <string name="btn_bayar">Bayar</string>
    <string name="tv_cek_email_anda">Cek SMS Anda!</string>
    <string name="tv_kendaraan_yang_sedang_anda_cari">Kendaraan yang sedang Anda cari?</string>
    <string name="tv_baru_masuk">Baru Masuk</string>
    <string name="tv_live">Live</string>
    <string name="tv_akan_tayang">Akan Tayang</string>
    <string name="tv_record">Riwayat</string>
    <string name="tv_lihat_semua">Lihat Semua</string>
    <string name="tv_registrasikan_diri_anda_sekarang">Registrasikan diri Anda sekarang</string>
    <string name="tv_full_name">Nama Lengkap</string>
    <string name="tv_phone_number">Nomor Telepon</string>
    <string name="tv_dengan_membuat_akun_anda_menyetujui">Dengan membuat akun, Anda menyetujui</string>
    <string name="tv_syarat_amp_ketentuan"><![CDATA[Syarat & Ketentuan]]></string>
    <string name="btn_register">Daftar</string>
    <string name="tv_sudah_punya_akun">Sudah punya akun?</string>
    <string name="tv_login">Masuk</string>
    <string name="tv_pencarian">Pencarian</string>
    <string name="tv_hapus">Hapus</string>
    <string name="btn_cari">Cari</string>
    <string name="tv_merek">Merek</string>
    <string name="tv_location">Lokasi</string>
    <string name="tv_kisaran_harga">Kirasan Harga</string>
    <string name="tv_type_car">Tipe Mobil</string>
    <string name="tv_grade">Grade</string>
    <string name="tv_filter">Filter</string>
    <string name="btn_filter">Filter</string>
    <string name="tv_semua_unit">Semua Unit</string>
    <string name="tv_hasil_pencarian">Hasil Pencarian</string>
    <string name="tv_deskripsi_kendaraan">Deskripsi Kendaraan :</string>
    <string name="tv_data_mobil">Data Mobil</string>
    <string name="tv_body">Body</string>
    <string name="tv_interior">Interior</string>
    <string name="tv_engine">Mesin</string>
    <string name="tv_other">Lain-lain</string>
    <string name="tv_broken_image">Foto Kerusakan</string>
    <string name="btn_nego">Tawar</string>
    <string name="tv_id_nomor">ID Nomor</string>
    <string name="tv_score">Skor</string>
    <string name="tv_no_polisi">No. Polisi</string>
    <string name="tv_year">Year</string>
    <string name="tv_year_filter">Tahun</string>
    <string name="tv_transmition">Transmition</string>
    <string name="tv_color">Color</string>
    <string name="tv_km">KM</string>
    <string name="tv_kepemilikan">Kepemilikan</string>
    <string name="tv_stnk">STNK</string>
    <string name="tv_masa_berlaku_pajak">Masa Berlaku Pajak</string>
    <string name="tv_masa_berlaku_stnk">Masa Berlaku STNK</string>
    <string name="tv_power_window">Power Window</string>
    <string name="tv_electric_mirror">Electric Mirror</string>
    <string name="tv_cat_body">Cat Body</string>
    <string name="tv_panel_pintu">Panel Pintu</string>
    <string name="tv_pilar_pintu">Pilar Pintu</string>
    <string name="tv_handle_pintu">Handle Pintu</string>
    <string name="tv_lisplang">Lisplang</string>
    <string name="tv_fender_belakang">Fender Belakang</string>
    <string name="tv_bemper_belakang">Bemper Belakang</string>
    <string name="tv_pintu_bagasi">Pintu Bagasi</string>
    <string name="tv_fender_depan">Fender Depan</string>
    <string name="tv_bember_depan">Bember Depan</string>
    <string name="tv_grill">Grill</string>
    <string name="tv_kap_mesin">Kap Mesin</string>
    <string name="tv_panel_atap">Panel Atap</string>
    <string name="tv_kaca_depan">Kaca Depan</string>
    <string name="tv_kaca_jendela">Kaca Jendela</string>
    <string name="tv_spion">Spion</string>
    <string name="tv_kaca_belakang">Kaca Belakang</string>
    <string name="tv_lampu_depan">Lampu Depan</string>
    <string name="tv_lampu_belakang">Lampu Belakang</string>
    <string name="tv_ban">Ban</string>
    <string name="tv_velg">Velg</string>
    <string name="tv_disc_brake">Disc Brake</string>
    <string name="tv_brake_pad">Brake Pad</string>
    <string name="tv_master_rem">Master Rem</string>
    <string name="tv_shockbreaker">Shockbreaker</string>
    <string name="tv_link_stabilizier">Link Stabilizier</string>
    <string name="tv_rack_setir">Rack Setir</string>
    <string name="tv_knalpot">Knalpot</string>
    <string name="tv_upper_lower_arm">Upper-Lower Arm</string>
    <string name="tv_faktur_asli">Faktur Asli</string>
    <string name="tv_nik_asli">NIK Asli</string>
    <string name="tv_bebas_tabrakan_besar">Bebas Tabrakan Besar</string>
    <string name="tv_gesekan_no_rangka">Gesekan No Rangka</string>
    <string name="tv_sistem_ac">Sistem AC</string>
    <string name="tv_rem_abs">Rem ABS</string>
    <string name="tv_asap_knalpot">Asap Knalpot</string>
    <string name="tv_power_steering">Power Steering</string>
    <string name="tv_oli_mesin">Oli Mesin</string>
    <string name="tv_oli_transmisi_at">Oli Transmisi AT</string>
    <string name="tv_oli_rem">Oli Rem</string>
    <string name="tv_oli_power_steering">Oli Power Steering</string>
    <string name="tv_air_radiator">Air Radiator</string>
    <string name="tv_mesin_bebas_rembes">Mesin Bebas Rembes</string>
    <string name="tv_pengisian_aki">Pengisian Aki</string>
    <string name="tv_dinamo_ampere">Dinamo Ampere</string>
    <string name="tv_pompa_power_steering">Pompa Power Steering</string>
    <string name="tv_kompresor_ac">Kompresor AC</string>
    <string name="tv_water_pump">Water Pump</string>
    <string name="tv_belt">Belt</string>
    <string name="tv_fan">Fan</string>
    <string name="tv_radiator">Radiator</string>
    <string name="tv_suara_mesin_normal">Suara Mesin Normal</string>
    <string name="tv_getaran_mesin_normal">Getaran Mesin Normal</string>
    <string name="tv_starter_mesin_normal">Starter Mesin Normal</string>
    <string name="tv_rpm_stabil">RPM Stabil</string>
    <string name="tv_setir_tidak_baret_bunyi">Setir Tidak Baret/Bunyi</string>
    <string name="tv_ketebalan_kampas_kopling">Ketebalan Kampas Kopling</string>
    <string name="tv_airbag">Airbag</string>
    <string name="tv_central_lock">Central Lock</string>
    <string name="tv_sistem_audio">Sistem Audio</string>
    <string name="tv_panel_indikator">Panel Indikator</string>
    <string name="tv_setir">Setir</string>
    <string name="tv_panel_dashboard">Panel Dashboard</string>
    <string name="tv_rem_tangan">Rem Tangan</string>
    <string name="tv_pembuka_kap_mesin">Pembuka Kap Mesin</string>
    <string name="tv_switch_lampu">Switch Lampu</string>
    <string name="tv_switch_wiper">Switch Wiper</string>
    <string name="tv_klakson">Klakson</string>
    <string name="tv_jok">Jok</string>
    <string name="tv_console_box">Console Box</string>
    <string name="tv_door_trim">Door Trim</string>
    <string name="tv_kaca_film">Kaca Film</string>
    <string name="tv_plafon">Plafon</string>
    <string name="tv_karpet_dasar">Karpet Dasar</string>
    <string name="tv_buku_service">Buku Service</string>
    <string name="tv_buku_manual">Buku Manual</string>
    <string name="tv_dongkrak_dan_kunci">Dongkrak dan Kunci</string>
    <string name="tv_tidak_ada_indikasi_banjir">Tidak Ada Indikasi Banjir</string>
    <string name="tv_waktu_penawaran">Waktu Penawaran</string>
    <string name="tv_penawar">Penawar</string>
    <string name="tv_riwayat_penawaran">Riwayat Penawaran</string>
    <string name="tv_penawaran_anda">Penawaran Anda</string>
    <string name="tv_apakah_anda_ingin_menawar">Apakah Anda ingin\nmenawar?</string>
    <string name="btn_buy_now">Buy Now</string>
    <string name="tv_apakah_anda_ingin_buy_now">Apakah anda ingin\nBuy Now?</string>
    <string name="btn_garasi">Keranjang</string>
    <string name="tv_berhasil_menawar">Berhasil Menawar</string>
    <string name="tv_berhasil_buy_now">Berhasil Buy Now</string>
    <string name="btn_pembayaran">Pembayaran</string>
    <string name="tv_password_baru">Password Baru</string>
    <string name="btn_change_password">Ubah</string>
    <string name="tv_kode_otp_terkirim">Kode OTP terkirim!</string>
    <string name="tv_cek_email_atau_sms_dan_masuki_otp_anda_untuk_memverifikasi_akun">Cek email atau SMS dan masuki OTP Anda untuk memverifikasi akun</string>
    <string name="btn_verifikasi">Verifikasi</string>
    <string name="tv_change_password">Ganti Password</string>
    <string name="tv_change_your_password">Rubah password yang Anda lupa</string>
    <string name="et_nik_ktp_sim">NIK (KTP / SIM)</string>
    <string name="tv_data_diri">Data Diri</string>
    <string name="et_nama_lengkap">Nama Lengkap</string>
    <string name="et_email">Email</string>
    <string name="et_alamat">Alamat</string>
    <string name="et_telpon">Telpon</string>
    <string name="et_nomor_telepon">Nomor Telepon</string>
    <string name="et_password">Password</string>
    <string name="et_confirm_password">Confirm Password</string>
    <string name="tv_profil_usaha">Profil Usaha</string>
    <string name="et_tipe_usaha">Tipe Usaha</string>
    <string name="et_nama_dealer">Nama Dealer</string>
    <string name="et_nomor_telepon_dealer">Nomor Telepon Dealer</string>
    <string name="tv_pembayaran">Pembayaran</string>
    <string name="tv_total_yang_harus_dibayar">Total yang harus dibayar</string>
    <string name="tv_metode_pembayaran">Metode Pembayaran</string>
    <string name="tv_sms_untuk_membuat_kata_sandi_baru_ntelah_dikirim_ke_nomor_anda">SMS untuk membuat kata sandi baru\ntelah dikirim ke nomor Anda</string>
</resources>