<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimaryWhite"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.PayPaymentActivity">
    <RelativeLayout
        android:id="@+id/relative_toolbar"
        android:paddingLeft="@dimen/_10sdp"
        android:paddingRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp">
        <ImageView
            android:id="@+id/iv_back"
            android:src="@drawable/ic_back_icon_big"
            android:padding="@dimen/_10sdp"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            tools:ignore="ContentDescription,RelativeOverlap" />
    </RelativeLayout>
    <LinearLayout
        android:layout_below="@+id/relative_toolbar"
        android:paddingLeft="@dimen/_20sdp"
        android:paddingRight="@dimen/_20sdp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_14sdp"
            android:fontFamily="@font/nunito_semi_bold"
            android:text="@string/tv_pembayaran"
            android:textColor="@color/colorPrimaryFont"
            android:textSize="@dimen/text_24" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_25sdp"
            android:fontFamily="@font/nunito_regular"
            android:text="@string/tv_total_yang_harus_dibayar"
            android:textColor="@color/colorPrimaryFont"
            android:textSize="@dimen/text_14" />
        <TextView
            android:id="@+id/tv_total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:fontFamily="@font/nunito_regular"
            android:text="Rp 125.000.000"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimaryFont"
            android:textSize="@dimen/text_30" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:fontFamily="@font/nunito_regular"
            android:text="@string/tv_metode_pembayaran"
            android:textColor="@color/colorPrimaryFont"
            android:textSize="@dimen/text_14" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_payment_method"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"/>
    </LinearLayout>
    <Button
        android:id="@+id/btn_pay"
        android:fontFamily="@font/nunito_bold"
        android:textSize="@dimen/text_18"
        android:text="@string/btn_bayar"
        android:textColor="@color/colorPrimaryWhite"
        android:layout_alignParentBottom="true"
        android:textAllCaps="false"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:background="@drawable/btn_design"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</RelativeLayout>