<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryWhite"
    tools:context=".activity.ForgotPasswordActivity">
    <RelativeLayout
        android:id="@+id/relative_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp">
        <ImageView
            android:id="@+id/iv_back"
            android:src="@drawable/ic_back"
            android:padding="@dimen/_10sdp"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            tools:ignore="ContentDescription,RelativeOverlap" />
    </RelativeLayout>
    <LinearLayout
        android:gravity="center"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_gravity="center"
            android:src="@drawable/ic_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="ContentDescription" />
        <TextView
            android:layout_marginTop="@dimen/_50sdp"
            android:textColor="@color/colorPrimaryFont"
            android:textSize="@dimen/text_24"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/tv_cek_email_anda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:alpha="0.6"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/nunito_semi_bold"
            android:textColor="@color/colorPrimaryFont"
            android:textSize="@dimen/text_14"
            android:gravity="center"
            android:text="@string/tv_sms_untuk_membuat_kata_sandi_baru_ntelah_dikirim_ke_nomor_anda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <Button
        android:id="@+id/btn_next"
        android:text="@string/btn_next"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginRight="@dimen/_16sdp"
        android:background="@drawable/btn_design"
        android:layout_marginBottom="@dimen/_20sdp"
        android:fontFamily="@font/nunito_semi_bold"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryWhite"
        android:textSize="@dimen/text_18"
        tools:ignore="ObsoleteLayoutParam" />
</RelativeLayout>